--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -4,14 +4,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #ff051af1;
+    background-color: #313030f1;
     padding: 0 10%;
   }
   
   .logo {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: rgb(255, 255, 255);
     font-weight: bold;
+    margin-left: -6rem;
   }
   
   .header ul {
@@ -23,25 +24,17 @@
   }
   
   .header li {
-    margin-left: 3rem;
+    margin-left: 5rem;
   }
   
   .header a {
     text-decoration: none;
     font-size: 1.5rem;
-    color: #fcb8d2;
+    color: #ffffff;
   }
   
   .header a:hover,
   .header a:active,
   .header a.active {
     color: white;
-  }
-  
-  .badge {
-    background-color: #cc2062;
-    color: white;
-    border-radius: 12px;
-    padding: 0 1rem;
-    margin-left: 0.5rem;
   }
