Api not working hard coded 4 teams into table,fixtures and results

--- a/src/components/Fixtures/Fixtures.module.css
+++ b/src/components/Fixtures/Fixtures.module.css
@@ -10,8 +10,6 @@
     padding: 1rem;
     font-size: 1.25rem;
     text-align:center; 
-    margin-left:auto; 
-    margin-right:auto; 
-    width:35%;
+    margin-left:40%; 
   }
   
