--- a/src/components/Fixtures/Fixtures.module.css
+++ b/src/components/Fixtures/Fixtures.module.css
@@ -1,15 +1,22 @@
 .item {
-    margin: 1rem 0;
-  }
-  
-  .container {
-    padding-bottom: 1.5rem;
-  }  
+  margin: 1rem 0;
+}
 
-  .content {
-    padding: 1rem;
-    font-size: 1.25rem;
-    text-align:center; 
-    margin-left:40%; 
-  }
+.container {
+  display: flex;
+  padding-bottom: 1.5rem;
+}  
+.title {
+  text-align: center;
+  padding: 0.5rem;
+}
   
+.content {
+  margin-left: 28%;
+  padding: 1rem;
+}
+
+.table , th, td{
+  border:1px solid black;
+  width: 600px;
+}
