--- a/src/pages/Stats.module.css
+++ b/src/pages/Stats.module.css
@@ -1,8 +1,8 @@
 .mainDiv {
-    padding: 0 5%;
-    height: 2000px;
-  }
-  
-  .heading {
-    color: white;
-  }
+  padding: 0 5%;
+  height: Fill;
+}
+
+.heading {
+  color: white;
+}
